add /decodergbinvoice API
